<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.croxis.plugins.lift</groupId>
    <artifactId>Lift</artifactId>
    <name>Lift</name>
    <description>Simple and easy Lifts and Elevators for Bukkit</description>
    <url>https://github.com/croxis/Lift</url>
    <version>78</version>
    
   	<scm>
		<developerConnection>scm:git:git@github.com:croxis/Lift.git</developerConnection>
		<connection>scm:git:git@github.com:croxis/Lift.git</connection>
		<url>https://github.com/croxis/Lift</url>
	</scm>
	<!-- Organization -->
	<organization>
		<name>croxis</name>
		<url>https://github.com/croxis</url>
	</organization>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<bukkitVersion>1.21-R0.1-SNAPSHOT</bukkitVersion>
		<spongeVersion>12.0.0-SNAPSHOT</spongeVersion>
	</properties>
    
    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>sponge</id>
			<name>sponge</name>
			<url>https://repo.spongepowered.org/maven</url>
		</repository>
		<repository>
			<id>maven_central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>
    <build>
    	<defaultGoal>clean install</defaultGoal>
		<resources>
			<resource>
			<targetPath>.</targetPath>
			<filtering>true</filtering>
			<directory>${basedir}/src/main/resources</directory>
			<includes>
				<include>*.yml</include>
			</includes>
			</resource>
		</resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.10.b1</version>
				<executions>
					<execution>
						<phase>clean</phase>
						<goals>
						<goal>format</goal>
						</goals>
						</execution>
				</executions>
				<configuration>
					<quiet>false</quiet>
					<encoding>UTF-8</encoding>
					<strictCheck>true</strictCheck>
					<header>${basedir}/HEADER.txt</header>
					<keywords>
					<keyword>${project.name}</keyword>
					<keyword>license</keyword>
					</keywords>
					<mapping>
					<java>SLASHSTAR_STYLE</java>
					</mapping>
					<properties>
					<name>${project.name}</name>
					<url>${project.organization.url}</url>
					<copyright>Copyright (c) ${project.inceptionYear}-2013, ${project.organization.name}</copyright>
					</properties>
					<includes>
					<include>src/main/java/**</include>
					<include>src/test/java/**</include>
					</includes>
				</configuration>
			</plugin>
        </plugins>
        <pluginManagement>
        	<plugins>
        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        		<plugin>
        			<groupId>org.eclipse.m2e</groupId>
        			<artifactId>lifecycle-mapping</artifactId>
        			<version>1.0.0</version>
        			<configuration>
        				<lifecycleMappingMetadata>
        					<pluginExecutions>
        						<pluginExecution>
        							<pluginExecutionFilter>
        								<groupId>net.md-5</groupId>
        								<artifactId>
        									specialsource-maven-plugin
        								</artifactId>
        								<versionRange>
        									[1.1-SNAPSHOT,)
        								</versionRange>
        								<goals>
        									<goal>
        										install-remapped-file
        									</goal>
        								</goals>
        							</pluginExecutionFilter>
        							<action>
        								<ignore></ignore>
        							</action>
        						</pluginExecution>
        					</pluginExecutions>
        				</lifecycleMappingMetadata>
        			</configuration>
        		</plugin>
        	</plugins>
        </pluginManagement>
    </build>
    <dependencies>
    <dependency>
          <groupId>org.spigotmc</groupId>
          <artifactId>spigot-api</artifactId>
          <version>${bukkitVersion}</version>
		</dependency>
        <dependency>
			<groupId>org.spongepowered</groupId>
			<artifactId>spongeapi</artifactId>
			<version>${spongeVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>
    </dependencies>
</project>
